# QLocalServer-Test-Tool

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  filenamedrophandler.cpp  filenamedrophandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
